UPDATE helloWorld html

--- a/helloWorld.html
+++ b/helloWorld.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Hello World</title>
-  <link rel="stylesheet" href="helloworld.css">
-  <script src="helloworld.js"></script>
+  <link rel="stylesheet" href="helloWorld.css">
+  <script src="helloWorld.js"></script>
 </head>
 <body>
   <h1>👋 Hello my World!</h1>
